# infer-forge

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PRODUCTION.md  README.md  docker-compose.backup.yml  docker-compose.prod.yml  docker-compose.yml  prezentace-vedeni.html
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  seed_additional.py  seed_demo.py  seed_manufacturing.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_notifications_and_embeddings.py  a1b2c3d4e5f6_add_operations.py  b2c3d4e5f6a7_add_operations.py  c3d4e5f6g7h8_add_subcontractors.py  d4e5f6g7h8i9_add_orchestration_tables.py  dde641b78bb9_initial_schema.py  e5f6g7h8i9j0_add_assigned_to_orders.py  e6c0d56e02fa_add_user_points_table.py  f1a2b3c4d5e6_add_material_prices_and_prd_fields.py  g1h2i3j4k5l6_add_direction_and_thread_backfill.py  h2i3j4k5l6m7_add_approval_workflow.py  i3j4k5l6m7n8_customer_fk_restrict.py  j4k5l6m7n8o9_add_check_constraints.py  j4k5l6m7n8o9_add_missing_indexes.py  k5l6m7n8o9p0_add_missing_indexes.py
backend/app/: main.py
backend/app/agents/: __init__.py  calculation_agent.py  email_classifier.py  email_parser.py  process_advisor.py  tasks.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  architecture.py  auth.py  calculations.py  customers.py  dashboard.py  documents.py  gamification.py  inbox.py  material_prices.py  notifications.py  operations.py  orchestration.py  orders.py  pohoda.py  reporting.py  settings.py  subcontractors.py  websocket.py
backend/app/core/: __init__.py  celery_app.py  circuit_breaker.py  config.py  database.py  encryption.py  health.py  logging.py  metrics.py  middleware.py  prometheus_middleware.py  rate_limiter.py  security.py  sentry.py  websocket.py
backend/app/integrations/email/: __init__.py  imap_client.py  smtp_client.py  (+1 more)
backend/app/models/: __init__.py  audit.py  base.py  calculation.py  calculation_feedback.py  classification_feedback.py  customer.py  dead_letter.py  document.py  document_embedding.py  drawing_analysis.py  email_attachment.py  inbox.py  material_price.py  notification.py  offer.py  operation.py  order.py  order_embedding.py  pohoda_sync.py  processing_task.py  subcontract.py  subcontractor.py  user.py  user_points.py
backend/app/orchestration/: __init__.py  router.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  calculation.py  customer.py  document.py  document_generator.py  drawing.py  embedding.py  gamification.py  inbox.py  material_price.py  notification.py  operation.py  order.py  pohoda.py  reporting.py  subcontractor.py
backend/app/services/: __init__.py  anomaly.py  assignment.py  auth.py  calculation.py  customer.py  deadline_monitor.py  deadline_tasks.py  document.py  document_embedding.py  document_generator.py  embedding.py  embedding_tasks.py  gamification.py  inbox.py  material_price.py  notification.py  operation.py  order.py  pohoda.py  prediction.py  recommendation.py  reporting.py  subcontractor.py
backend/app/templates/: atestace.html  base.html  dodaci_list.html  email_response.html  faktura.html  nabidka.html  objednavka.html  protokol_rozmerovy.html  pruvodka.html
backend/docs/: ENCRYPTION.md
backend/scripts/: encrypt_existing_documents.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: sample_invoice.xml
backend/tests/unit/: test_agent_tasks.py  test_auth.py  test_cad_metadata.py  test_calculation_agent.py  test_calculations.py  test_core_config.py  test_core_security.py  test_customer_discounts.py  test_deadline_monitor.py  test_document_generator.py  test_document_type_detector.py  test_documents.py  test_drawing_analyzer.py  test_email_assignment.py  test_email_autoreply.py  test_email_classifier.py  test_email_ingestion.py  test_email_parser.py  test_email_tasks.py  test_embedding_service.py  test_encryption.py  test_excel_integration.py  test_gamification.py  test_gdpr.py  test_heuristic_classifier.py  test_material_prices.py  test_material_requirements.py  test_models.py  test_notification_model.py  test_notification_service.py  test_ocr_integration.py  test_offer_conversion.py  test_operations.py  test_orchestration_api.py  test_orchestration_models.py  test_orchestration_router.py  test_pohoda_integration.py  test_pohoda_invoice.py  test_pohoda_service.py  test_pohoda_stock.py  (+6 more)
(+224 files in other folders)
